CLOSED FIXED 36529
[Qt] Compilation error on Qt for Embedded Linux built with -qconfig medium
https://bugs.webkit.org/show_bug.cgi?id=36529
Summary [Qt] Compilation error on Qt for Embedded Linux built with -qconfig medium
Tasuku Suzuki
Reported 2010-03-24 06:40:55 PDT
-qconfig medium disables some features like textcodecs, action and so on.
Attachments
add #ifndef QT_NO_TEXTCODEC ~ #endif (2.17 KB, patch)
2010-03-24 07:21 PDT, Tasuku Suzuki
hausmann: review-
hausmann: commit-queue-
add #ifndef QT_NO_ACTION ~ #endif (11.04 KB, patch)
2010-03-24 07:21 PDT, Tasuku Suzuki
eric: review-
add #ifndef QT_NO_ACTION ~ #endif to use QAction (6.08 KB, patch)
2010-03-25 07:41 PDT, Tasuku Suzuki
no flags
Tasuku Suzuki
Comment 1 2010-03-24 07:21:17 PDT
Created attachment 51494 [details] add #ifndef QT_NO_TEXTCODEC ~ #endif
Tasuku Suzuki
Comment 2 2010-03-24 07:21:58 PDT
Created attachment 51495 [details] add #ifndef QT_NO_ACTION ~ #endif
Eric Seidel (no email)
Comment 3 2010-03-24 23:40:10 PDT
Comment on attachment 51494 [details] add #ifndef QT_NO_TEXTCODEC ~ #endif How does this even compile? What encodings does it use if not the TextCodecQt?
Eric Seidel (no email)
Comment 4 2010-03-24 23:41:56 PDT
Comment on attachment 51495 [details] add #ifndef QT_NO_ACTION ~ #endif What does this do, and why is it useful? Please explain in the ChangeLog.
Tasuku Suzuki
Comment 5 2010-03-25 03:56:14 PDT
(In reply to comment #3) > (From update of attachment 51494 [details]) > How does this even compile? What encodings does it use if not the TextCodecQt? TextCodecQt is useless if QTextCodec is disabled in Qt. No codec would be used.
Tasuku Suzuki
Comment 6 2010-03-25 07:41:24 PDT
Created attachment 51640 [details] add #ifndef QT_NO_ACTION ~ #endif to use QAction made a smaller patch and added description in the ChangeLog.
Simon Hausmann
Comment 7 2010-03-28 02:19:31 PDT
Comment on attachment 51494 [details] add #ifndef QT_NO_TEXTCODEC ~ #endif The patch itself is fine, but I don't think we should add these defines, as WebKit cannot be used without codecs. Therefore the right thing to do is to disable the compilation of WebKit altogether if Qt is compiled with QT_NO_TEXTCODEC.
Simon Hausmann
Comment 8 2010-03-28 02:21:23 PDT
(In reply to comment #6) > Created an attachment (id=51640) [details] > add #ifndef QT_NO_ACTION ~ #endif to use QAction > > made a smaller patch and added description in the ChangeLog. I'm wondering about this one, too. The API is rendered almost useless if it's not possible to access the actions. There isn't much you can do with WebKit if you don't have QAction objects. Tasuku, what's the use-case for this? Shouldn't WebKit be disabled in this configuration instead?
Tasuku Suzuki
Comment 9 2010-03-28 06:13:39 PDT
(In reply to comment #7) > (From update of attachment 51494 [details]) > The patch itself is fine, but I don't think we should add these defines, as > WebKit cannot be used without codecs. Therefore the right thing to do is to > disable the compilation of WebKit altogether if Qt is compiled with > QT_NO_TEXTCODEC. (In reply to comment #8) > (In reply to comment #6) > I'm wondering about this one, too. The API is rendered almost useless if it's > not possible to access the actions. There isn't much you can do with WebKit if > you don't have QAction objects. > > Tasuku, what's the use-case for this? Shouldn't WebKit be disabled in this > configuration instead? From a general browser point of view, WebKit is useless without these two features. On the other hand, for people who uses WebKit as a platform for html and javascript apps, it can be useful even if such features are not available. WebKit should be enabled as much as possible.
Simon Hausmann
Comment 10 2010-03-28 13:15:01 PDT
(In reply to comment #9) > (In reply to comment #7) > > (From update of attachment 51494 [details] [details]) > > The patch itself is fine, but I don't think we should add these defines, as > > WebKit cannot be used without codecs. Therefore the right thing to do is to > > disable the compilation of WebKit altogether if Qt is compiled with > > QT_NO_TEXTCODEC. > > (In reply to comment #8) > > (In reply to comment #6) > > I'm wondering about this one, too. The API is rendered almost useless if it's > > not possible to access the actions. There isn't much you can do with WebKit if > > you don't have QAction objects. > > > > Tasuku, what's the use-case for this? Shouldn't WebKit be disabled in this > > configuration instead? > > From a general browser point of view, WebKit is useless without these two > features. On the other hand, for people who uses WebKit as a platform for html > and javascript apps, it can be useful even if such features are not available. > WebKit should be enabled as much as possible. Even if you just want to display html and run JavaScript you're going to need text codecs, to properly convert the 8-bit input into unicode.
Tasuku Suzuki
Comment 11 2010-03-28 17:56:18 PDT
(In reply to comment #10) > (In reply to comment #9) > > (In reply to comment #7) > > > (From update of attachment 51494 [details] [details] [details]) > > > The patch itself is fine, but I don't think we should add these defines, as > > > WebKit cannot be used without codecs. Therefore the right thing to do is to > > > disable the compilation of WebKit altogether if Qt is compiled with > > > QT_NO_TEXTCODEC. > > > > (In reply to comment #8) > > > (In reply to comment #6) > > > I'm wondering about this one, too. The API is rendered almost useless if it's > > > not possible to access the actions. There isn't much you can do with WebKit if > > > you don't have QAction objects. > > > > > > Tasuku, what's the use-case for this? Shouldn't WebKit be disabled in this > > > configuration instead? > > > > From a general browser point of view, WebKit is useless without these two > > features. On the other hand, for people who uses WebKit as a platform for html > > and javascript apps, it can be useful even if such features are not available. > > WebKit should be enabled as much as possible. > > Even if you just want to display html and run JavaScript you're going to need > text codecs, to properly convert the 8-bit input into unicode. I see. I'll find a way to disable WebKit when Qt is compiled without textcodec support. How about QAction?
Simon Hausmann
Comment 12 2010-04-08 01:48:11 PDT
(In reply to comment #11) > > Even if you just want to display html and run JavaScript you're going to need > > text codecs, to properly convert the 8-bit input into unicode. > > I see. I'll find a way to disable WebKit when Qt is compiled without textcodec > support. How about QAction? I'm inclined to apply the same argument to QAction. There's very basic stuff that can't be done without QActions, such as determining whether you can go back or forward in the history, or creating a context menu. I propose to discuss this on the mailing list first, I'd like to know if there are other people interested in having this feature. I've started a thread on the mailing list: https://lists.webkit.org/pipermail/webkit-qt/2010-April/000332.html Let's find a concensus there first and then continue with these patches.
Simon Hausmann
Comment 13 2010-04-08 01:49:13 PDT
Comment on attachment 51640 [details] add #ifndef QT_NO_ACTION ~ #endif to use QAction Clearning review as per comment 12.
WebKit Commit Bot
Comment 14 2010-04-09 03:55:32 PDT
Comment on attachment 51640 [details] add #ifndef QT_NO_ACTION ~ #endif to use QAction Clearing flags on attachment: 51640 Committed r57327: <http://trac.webkit.org/changeset/57327>
WebKit Commit Bot
Comment 15 2010-04-09 03:55:38 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 16 2010-04-09 04:17:06 PDT
http://trac.webkit.org/changeset/57327 might have broken Leopard Intel Release (Tests) The following changes are on the blame list: http://trac.webkit.org/changeset/57326 http://trac.webkit.org/changeset/57327
Simon Hausmann
Comment 17 2010-04-09 07:21:54 PDT
Revision r57327 cherry-picked into qtwebkit-2.0 with commit 2ad5e21e9a363de2b2c837a04d37e63460d4df59
Note You need to log in before you can comment on or make changes to this bug.