2010-04-09  Tasuku Suzuki  <tasuku.suzuki@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Fix compile error with QT_NO_ACTION
        https://bugs.webkit.org/show_bug.cgi?id=36529

        Make sure QT_NO_ACTION is not defined to use QAction

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::pageAction):
        * Api/qwebpage.cpp:
        (QWebPagePrivate::updateAction):
        (QWebPage::updatePositionDependentActions):
        * Api/qwebpage.h:
        * Api/qwebview.cpp:
        * Api/qwebview.h:

Canonical link: https://commits.webkit.org/48619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57327 268f45cc-cd09-0410-ab3c-d52691b4dbfc