WebKit/qt/Api/qgraphicswebview.cpp
@@ -1061,7 +1061,12 @@ QWebSettings* QGraphicsWebView::settings() const
 */
 QAction *QGraphicsWebView::pageAction(QWebPage::WebAction action) const
 {
+#ifdef QT_NO_ACTION
+    Q_UNUSED(action)
+    return 0;
+#else
     return page()->action(action);
+#endif
 }
 
 /*!
