WebKit/qt/Api/qwebpage.h
@@ -220,7 +220,9 @@ public:
 
     QString selectedText() const;
 
+#ifndef QT_NO_ACTION
     QAction *action(WebAction action) const;
+#endif
     virtual void triggerAction(WebAction action, bool checked = false);
 
     QSize viewportSize() const;
@@ -348,7 +350,9 @@ protected:
 
 private:
     Q_PRIVATE_SLOT(d, void _q_onLoadProgressChanged(int))
+#ifndef QT_NO_ACTION
     Q_PRIVATE_SLOT(d, void _q_webActionTriggered(bool checked))
+#endif
     Q_PRIVATE_SLOT(d, void _q_cleanupLeakMessages())
 
     QWebPagePrivate *d;
