WebKit/qt/Api/qwebview.h
@@ -75,7 +75,9 @@ public:
 
     QString selectedText() const;
 
+#ifndef QT_NO_ACTION
     QAction* pageAction(QWebPage::WebAction action) const;
+#endif
     void triggerPageAction(QWebPage::WebAction action, bool checked = false);
 
     bool isModified() const;
